--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,8 +5,19 @@
     <title>Frontend</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- BEGIN: FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=KoHo&display=swap"
+      rel="stylesheet"
+    />
+    <!-- END: FONTS -->
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
   <body>
     <app-root></app-root>
   </body>
